--- a/html/hyewon.html
+++ b/html/hyewon.html
@@ -7,72 +7,500 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="http://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    /> -->
     <link rel="stylesheet" href="/css/proguct_page.css" />
+    <link rel="stylesheet" href="/css/product_all.css" />
   </head>
 
   <body>
-    <div id="root">
-      <button type="button" id="modal_opne_btn">제품사진 클릭</button>
-    </div>
-    <div id="modal">
-      <div class="modal_content">
-        <div class="close_button">
-          <svg
-            id="modal_close_btn"
-            xmlns="http://www.w3.org/2000/svg"
-            width="20"
-            height="20"
-            fill="currentColor"
-            class="bi bi-x-lg"
-            viewBox="0 0 20 20"
-          >
-            <path
-              d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
-            />
-          </svg>
-        </div>
-        <div class="content">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/product_img/item1_1.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_2.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_3.jpg" />
-              <img class="swiper-slide" src="/product_img/item1_4.jpg" />
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev">
-              <div class="material-icons"></div>
-            </div>
-            <div class="swiper-button-next">
-              <div class="material-icons"></div>
-            </div>
+    <div class="continer">
+      <div id="modal">
+        <div class="modal_content">
+          <div class="close_button">
+            <svg
+              id="modal_close_btn"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              fill="currentColor"
+              class="bi bi-x-lg"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
+              />
+            </svg>
           </div>
-          <div id="content" class="description"></div>
+          <div class="content">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <img class="swiper-slide" id="item__1" src="" />
+                <img class="swiper-slide" id="item__2" src="" />
+                <img class="swiper-slide" id="item__3" src="" />
+                <img class="swiper-slide" id="item__4" src="" />
+              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-prev">
+                <div class="material-icons"></div>
+              </div>
+              <div class="swiper-button-next">
+                <div class="material-icons"></div>
+              </div>
+            </div>
+            <div id="content" class="description"></div>
+          </div>
+          <div class="buy_button">
+            <a href="" class="button btnFloat but_btn"></a>
+          </div>
+          <div class="modal_layer"></div>
         </div>
-        <div class="buy_button">
-          <a href="" class="button btnFloat but_btn"></a>
+      </div>
+
+      <div class="grid">
+        <div class="card">
+          <img id="item1" src="/item_jpgs/item1.jpg" alt="상품 1" />
+          <h2>상품 제목 1</h2>
+          <p>$10.99</p>
         </div>
-        <div class="modal_layer"></div>
+        <div class="card">
+          <img id="item2" src="/item_jpgs/item2.jpg" alt="상품 2" />
+          <h2>상품 제목 2</h2>
+          <p>$19.99</p>
+        </div>
+        <div class="card">
+          <img id="item3" src="/item_jpgs/item3.jpg" alt="상품 3" />
+          <h2>상품 제목 3</h2>
+          <p>$14.99</p>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="card">
+          <img id="item4" src="/item_jpgs/item4.jpg" alt="상품 4" />
+          <h2>상품 제목 4</h2>
+          <p>$10.99</p>
+        </div>
+        <div class="card">
+          <img id="item5" src="/item_jpgs/item5.jpg" alt="상품 5" />
+          <h2>상품 제목 5</h2>
+          <p>$19.99</p>
+        </div>
+        <div class="card">
+          <img id="item6" src="/item_jpgs/item6.jpg" alt="상품 6" />
+          <h2>상품 제목 6</h2>
+          <p>$14.99</p>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="card">
+          <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
+          <h2>상품 제목 7</h2>
+          <p>$10.99</p>
+        </div>
+        <div class="card">
+          <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
+          <h2>상품 제목 8</h2>
+          <p>$19.99</p>
+        </div>
+        <div class="card">
+          <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
+          <h2>상품 제목 9</h2>
+          <p>$14.99</p>
+        </div>
       </div>
     </div>
+
     <script>
-      document.getElementById("modal_opne_btn").onclick = function () {
-        document.getElementById("modal").style.display = "block";
-      };
+      const btn_data1 = (document.getElementById("item1").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_1.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item1_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item1_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item1_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item1_4.jpg");
+        });
+      const btn_data2 = (document.getElementById("item2").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_2.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item2_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item2_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item2_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item2_4.jpg");
+        });
+
+      const btn_data3 = (document.getElementById("item3").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_3.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item3_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item3_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item3_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item3_4.jpg");
+        });
+
+      const btn_data4 = (document.getElementById("item4").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_4.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item4_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item4_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item4_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item4_4.jpg");
+        });
+
+      const btn_data5 = (document.getElementById("item5").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_5.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item5_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item5_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item5_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item5_4.jpg");
+        });
+
+      const btn_data6 = (document.getElementById("item6").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_6.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item6_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item6_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item6_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item6_4.jpg");
+        });
+
+      const btn_data7 = (document.getElementById("item7").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_7.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item7_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item7_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item7_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item7_4.jpg");
+        });
+
+      const btn_data8 = (document.getElementById("item8").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_8.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item8_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item8_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item8_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item8_4.jpg");
+        });
+
+      const btn_data9 = (document.getElementById("item9").onclick =
+        function () {
+          var username = "BB545"; // GitHub 사용자 이름
+          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
+          var filePath = "product/item_9.txt";
+          // GitHub raw URL 생성
+          var rawURL =
+            "https://raw.githubusercontent.com/" +
+            username +
+            "/" +
+            repo +
+            "/main/" +
+            filePath;
+
+          // AJAX 요청으로 파일 가져오기
+          $.ajax({
+            url: rawURL,
+            success: function (data) {
+              // 파일 내용을 content 요소에 추가
+              $("#content").html(data);
+            },
+            error: function () {
+              $("#content").html(
+                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
+              );
+            },
+          });
+          document.getElementById("modal").style.display = "block";
+          document
+            .getElementById("item__1")
+            .setAttribute("src", "/product_img/item9_1.jpg");
+          document
+            .getElementById("item__2")
+            .setAttribute("src", "/product_img/item9_2.jpg");
+          document
+            .getElementById("item__3")
+            .setAttribute("src", "/product_img/item9_3.jpg");
+          document
+            .getElementById("item__4")
+            .setAttribute("src", "/product_img/item9_4.jpg");
+        });
 
       document.getElementById("modal_close_btn").onclick = function () {
         document.getElementById("modal").style.display = "none";
+        document.body.style.overflow = "";
       };
+
       new Swiper(".swiper", {
         loop: true,
         slidesPerView: 1,
@@ -86,34 +514,8 @@
           nextEl: ".swiper-button-next",
         },
       });
-      $(document).ready(function () {
-        var username = "BB545"; // GitHub 사용자 이름
-        var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
-        var filePath = "product/item_1.txt"; // 가져올 파일 경로
 
-        // GitHub raw URL 생성
-        var rawURL =
-          "https://raw.githubusercontent.com/" +
-          username +
-          "/" +
-          repo +
-          "/main/" +
-          filePath;
-
-        // AJAX 요청으로 파일 가져오기
-        $.ajax({
-          url: rawURL,
-          success: function (data) {
-            // 파일 내용을 content 요소에 추가
-            $("#content").html(data);
-          },
-          error: function () {
-            $("#content").html(
-              "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
-            );
-          },
-        });
-      });
+      // $(document).ready(function () {});
     </script>
   </body>
 </html>
