--- a/html/purchase.html
+++ b/html/purchase.html
@@ -178,13 +178,23 @@
                 </select>
               </div>
               <div class="check-group">
-                <input type="submit" value="주문 완료" />
+                <input type="submit" value="주문 완료" onclick="showConfirmation()" />
               </div>
             </form>
           </div>
         </article>
       </section>
     </main>
+
+    <script>
+        function showConfirmation() {
+            // 주문 완료 알림창을 표시합니다.
+            alert("주문이 완료되었습니다!");
+
+            // 메인 화면으로 돌아갑니다. 이 예시에서는 메인 페이지로 이동하도록 설정했습니다.
+            window.location.href = "main.html"; // 메인 페이지의 URL로 변경하세요.
+        }
+    </script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
