--- a/html/main.html
+++ b/html/main.html
@@ -126,11 +126,7 @@
 
         // 화면 크기 변경 시 자동으로 네비게이션 숨기기
         $(window).resize(function() {
-            if ($(window).width() < 768) {
-                $('.nav__div').show();
-            } else {
-                $('.nav__div').hide();
-            }
+            $('.nav__div').hide();
         });
     });
     </script>
@@ -209,7 +205,7 @@
         </div>
         <div class="item banner-content">이벤트</div>
         <div class="item banner-btn">
-          <button type="button" class="btn btn-outline-light event-btn">
+          <button type="button" class="btn btn-outline-light event-btn" onclick="showEventinform()">
             자세히 보기
           </button>
         </div>
@@ -220,6 +216,16 @@
 
         <article class="body-back"></article>
     </main>
+
+    <script>
+      function showEventinform() {
+          // 주문 완료 알림창을 표시합니다.
+          alert("진행 중인 이벤트가 없습니다.");
+
+          // 메인 화면으로 돌아갑니다. 이 예시에서는 메인 페이지로 이동하도록 설정했습니다.
+          window.location.href = "main.html"; // 메인 페이지의 URL로 변경하세요.
+      }
+    </script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
