--- a/html/purchase.html
+++ b/html/purchase.html
@@ -164,7 +164,7 @@
         <article class="purchase">
           <div class="pur-name">주문자 정보</div>
           <div class="checkout">
-            <form>
+            <form id="pur-form">
               <div class="check-group">
                 <label for="fullname" class="check-name">이름</label>
                 <input type="text" id="fullname" name="fullname" placeholder="홍길동" required />
@@ -186,7 +186,7 @@
                 </select>
               </div>
               <div class="check-group">
-                <input type="submit" value="주문 완료" onclick="showConfirmation()" />
+                <input type="submit" value="주문 완료" />
               </div>
             </form>
           </div>
@@ -233,13 +233,19 @@
   </footer>
 
     <script>
-        function showConfirmation() {
-            // 주문 완료 알림창을 표시합니다.
-            alert("주문이 완료되었습니다!");
+        $(document).ready(function() {
+        $('#pur-form').submit(function(event) {
+          event.preventDefault(); // 폼의 기본 제출 동작 방지
 
-            // 메인 화면으로 돌아갑니다. 이 예시에서는 메인 페이지로 이동하도록 설정했습니다.
-            window.location.href = "main.html"; // 메인 페이지의 URL로 변경하세요.
-        }
+          if (this.checkValidity()) { // 폼이 유효한 경우
+            alert('주문이 완료되었습니다.');
+            window.location.href = 'main.html'; // 메인 페이지로 리다이렉트
+          } else {
+            // HTML5 기본 폼 검증 메시지 사용
+            this.reportValidity(); // 폼이 유효하지 않은 경우, 유효성 검사 메시지를 표시
+          }
+        });
+      });
     </script>
 
     <script
