--- a/html/purchase.html
+++ b/html/purchase.html
@@ -180,7 +180,7 @@
               <div class="check-group">
                 <label for="payment" class="check-name">결제 수단</label>
                 <select id="payment" name="payment" required>
-                  <option value="select">결제 수단을 선택하세요</option>
+                  <option value="">결제 수단을 선택하세요</option>
                   <option value="creditcard">신용 카드</option>
                   <option value="paypal">페이팔</option>
                 </select>
