--- a/html/purchase.html
+++ b/html/purchase.html
@@ -416,115 +416,114 @@
       });
     </script>
     <!--==================== Login.html ====================-->
-    <div class="home">
-      <div class="blur-background"></div>
-      <div class="form_container">
-        <i class="uil uil-times form_close"></i>
-        <!-- Login From -->
-        <div class="form login_form">
-          <form action="#">
-            <h2>로그인</h2>
-
-            <div class="input_box">
-              <input type="email" placeholder="이메일을 입력하세요" required />
-              <i class="uil uil-envelope-alt email"></i>
-            </div>
-            <div class="input_box">
-              <input
-                type="password"
-                placeholder="비밀번호를 입력하세요"
-                required
-              />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
-            </div>
-
-            <div class="option_field">
-              <span class="checkbox">
-                <input type="checkbox" id="check" />
-                <label for="check">로그인 유지</label>
-              </span>
-              <a href="#" class="forgot_pw">비밀번호 찾기</a>
-            </div>
-
-            <button class="button">로그인하기</button>
-
-            <div class="login_signup">
-              계정 없으신가요? <a href="#" id="signup">회원 가입</a>
-            </div>
-          </form>
+<div class="home">
+  <div class="blur-background"></div>
+  <div class="form_container">
+    <i class="uil uil-times form_close"></i>
+    <!-- Login From -->
+    <div class="form login_form"  >
+      <form action="#" class="login-reset" id="form">
+        <h2>로그인</h2>
+  
+        <div class="input_box">
+          <input type="email" placeholder="이메일을 입력하세요" required />
+          <i class="uil uil-envelope-alt email"></i>
         </div>
-        <!-- Signup From -->
-        <div class="form signup_form">
-          <form action="#">
-            <h2>회원 가입</h2>
-
-            <div class="input_box">
-              <input type="email" placeholder="이메일을 입력하기" required />
-              <i class="uil uil-envelope-alt email"></i>
-            </div>
-            <div class="input_box">
-              <input
-                type="password"
-                placeholder="새로운 비밀번호 만들기"
-                required
-              />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
-            </div>
-            <div class="input_box">
-              <input type="password" placeholder="비밀번호 확인" required />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
-            </div>
-            <button class="button">회원 가입하기</button>
-            <div class="login_signup">
-              이미 계정 있으신가요? <a href="#" id="login">로그인</a>
-            </div>
-          </form>
+        <div class="input_box">
+          <input type="password" placeholder="비밀번호를 입력하세요" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
         </div>
-      </div>
+  
+        <div class="option_field">
+          <span class="checkbox">
+            <input type="checkbox" id="check" />
+            <label for="check">로그인 유지</label>
+          </span>
+          <a href="#" class="forgot_pw">비밀번호 찾기</a>
+        </div>
+  
+        <button type="reset" class="button logged-btn">로그인하기</button>
+  
+        <div class="login_signup">계정 없으신가요? <a href="#" id="signup">회원 가입</a></div>
+      </form>
     </div>
-    <!--==================== Login script ====================-->
-    <script>
-      const formOpenBtn = document.querySelector("#form-open");
-      const formOpenlg = document.querySelector("#login_open"),
-        home = document.querySelector(".home"),
-        formContainer = document.querySelector(".form_container"),
-        formCloseBtn = document.querySelector(".form_close"),
-        signupBtn = document.querySelector("#signup"),
-        loginBtn = document.querySelector("#login"),
-        pwShowHide = document.querySelectorAll(".pw_hide");
+    <!-- Signup From -->
+    <div class="form signup_form">
+      <form action="#">
+        <h2>회원 가입</h2>
+  
+        <div class="input_box">
+          <input type="email" placeholder="이메일을 입력하기" required />
+          <i class="uil uil-envelope-alt email"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" placeholder="새로운 비밀번호 만들기" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" placeholder="비밀번호 확인" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
+        </div>
+        <button type="reset" class="button signed-in">회원 가입하기</button>
+        <div class="login_signup">이미 계정 있으신가요? <a href="#" id="login">로그인</a></div>
+      </form>
+    </div>
+  </div>
+</div>    
+<!--==================== Login script ====================-->
+<script>
+const formOpenBtn = document.querySelector("#form-open")
+const formOpenlg = document.querySelector("#login_open"),
+home = document.querySelector(".home"),
+formContainer = document.querySelector(".form_container"),
+formCloseBtn = document.querySelector(".form_close"),
+signupBtn = document.querySelector("#signup"),
+loginBtn = document.querySelector("#login"),
+pwShowHide = document.querySelectorAll(".pw_hide"),
+loggedBtn=document.querySelector(".logged-btn");
+signedBtn=document.querySelector(".signed-in");
 
-      formOpenlg.addEventListener("click", () => home.classList.add("show"));
-      formOpenBtn.addEventListener("click", () => home.classList.add("show"));
-      formCloseBtn.addEventListener("click", () =>
-        home.classList.remove("show")
-      );
 
-      pwShowHide.forEach((icon) => {
-        icon.addEventListener("click", () => {
-          let getPwInput = icon.parentElement.querySelector("input");
-          if (getPwInput.type === "password") {
-            getPwInput.type = "text";
-            icon.classList.replace("uil-eye-slash", "uil-eye");
-          } else {
-            getPwInput.type = "password";
-            icon.classList.replace("uil-eye", "uil-eye-slash");
-          }
-        });
-      });
+console.log(formContainer);
 
-      signupBtn.addEventListener("click", (e) => {
-        e.preventDefault();
-        formContainer.classList.add("active");
-      });
-      loginBtn.addEventListener("click", (e) => {
-        e.preventDefault();
-        formContainer.classList.remove("active");
-      });
-    </script>
-    <!----------------- Login script ----------->
+formOpenlg.addEventListener("click", () => home.classList.add("show"));
+formOpenBtn.addEventListener("click", () => home.classList.add("show"));
+formCloseBtn.addEventListener("click", () => home.classList.remove("show")); // x버튼
+
+pwShowHide.forEach((icon) => {
+icon.addEventListener("click", () => {
+let getPwInput = icon.parentElement.querySelector("input");
+if (getPwInput.type === "password") {
+getPwInput.type = "text";
+icon.classList.replace("uil-eye-slash", "uil-eye");
+} else {
+getPwInput.type = "password";
+icon.classList.replace("uil-eye", "uil-eye-slash");
+}
+});
+});
+loggedBtn.addEventListener("click",(e)=>{
+  alert("로그인에 성공하셨습니다!");
+  home.classList.remove("show");
+});
+signedBtn.addEventListener("click",(e)=>{
+  alert("회원 가입에 성공하셨습니다!");
+  home.classList.remove("show");
+  
+});
+signupBtn.addEventListener("click", (e) => {
+  e.preventDefault();
+  formContainer.classList.add("active");
+});
+loginBtn.addEventListener("click", (e) => {
+formContainer.classList.remove("active");
+});
+
+</script>
+<!----------------- Login script ----------->
     <!--==================== SEARCH html====================-->
     <div class="search" id="search">
       <form action="" class="search__form">
